--- a/stylus/repl.styl
+++ b/stylus/repl.styl
@@ -6,7 +6,8 @@ border-radius()
 body a
   display inline-block
   padding: 2px 5px
-  font: 12px/1.4 Ubuntu
+  font: 12px/1.4
+  font-family: Ubuntu, sans-serif
   background: black
   color: #eee
   border-radius: 2px
