--- a/stylus/repl.styl
+++ b/stylus/repl.styl
@@ -3,14 +3,16 @@ border-radius()
   -moz-border-radius: arguments
   border-radius: arguments
 
-body a
+#code
   display inline-block
   padding: 2px 5px
-  font: 12px/1.4
   font-family: Ubuntu, sans-serif
   background: black
   color: #eee
   border-radius: 2px
+
+.CodeMirror
+  font-family: Ubuntu, sans-serif
 
 form input
   padding: 5px
