--- a/stylus/repl.styl
+++ b/stylus/repl.styl
@@ -3,22 +3,23 @@ border-radius()
   -moz-border-radius: arguments
   border-radius: arguments
 
-#code
-  display inline-block
-  padding: 2px 5px
+body
+  background: #fff
+  color: #000
   font-family: Ubuntu, sans-serif
-  background: black
-  color: #eee
-  border-radius: 2px
+  margin: 0px
+  overflow: hidden
 
 .CodeMirror
+  background-color: rgba(255,255,255,0.75)
   font-family: Ubuntu, sans-serif
+  font-size: 120%
 
-form input
-  padding: 5px
-  border: 1px solid
-  border-radius: 5px
-
+.CodeMirror-scroll
+  height: 100%
+  
+.CodeMirror-gutter
+  background-color: #eee
 
 
 
