--- a/stylus/repl.styl
+++ b/stylus/repl.styl
@@ -12,12 +12,13 @@ body
 
 .CodeMirror
   background-color: rgba(255,255,255,0.75)
+  color: #111
   font-family: Ubuntu, sans-serif
   font-size: 120%
 
 .CodeMirror-scroll
   height: 100%
-  
+
 .CodeMirror-gutter
   background-color: #eee
 
