--- a/stylus/repl.styl
+++ b/stylus/repl.styl
@@ -13,8 +13,10 @@ body
 .CodeMirror
   background-color: rgba(255,255,255,0.75)
   color: #111
-  font-family: Ubuntu, sans-serif
-  font-size: 120%
+  font-family: Ubuntu Mono, sans-serif
+  font-style: normal
+  font-size: 150%
+  letter-spacing: 0px
 
 .CodeMirror-scroll
   height: 100%
