--- a/stylus/repl.styl
+++ b/stylus/repl.styl
@@ -10,19 +10,18 @@ border-radius()
 
 body
   font-family: Ubuntu, sans-serif
-  background: #404040
+  background-color: #404040
   color: #ccc
   overflow: hidden
 
 .CodeMirror
-  background-color: transparent
   min-width: 300px
   color: #ccc
   font-family: Ubuntu Mono, sans-serif
   font-style: normal
   font-size: 150%
   letter-spacing: 0px
-  background: transparent
+  background-color: rgba(15, 15, 15, 0.55)
   border-radius: 3px
   border: none
 
@@ -32,9 +31,9 @@ body
   height: 100%
 
 .CodeMirror-gutter
-  background-color: rgba(15, 15, 15, 0.55)
+  background-color: transparent
   font-family: Ubuntu, sans-serif
-  border: none
+  border-right: 5px solid #333
 
 .CodeMirror pre.CodeMirror-cursor
   border-left: 10px solid #eee
