--- a/stylus/repl.styl
+++ b/stylus/repl.styl
@@ -33,6 +33,9 @@ body
 .CodeMirror pre.CodeMirror-cursor
   border-left: 2px solid
 
+span.CodeMirror-matchhighlight { background: #49483E }
+.CodeMirror-focused span.CodeMirror-matchhighlight { background: #49483E; !important }
+
 
 // CodeMirror default theme
 
