--- a/stylus/repl.styl
+++ b/stylus/repl.styl
@@ -20,6 +20,13 @@ body
 .CodeMirror
   min-width: 300px
   letter-spacing: 0px
+  box-shadow: 0 0 15px black
+  position: absolute
+  width: 100%
+  height: 100%
+  // left: 1%
+  // top: 2%
+  // margin: 30px
 
 .CodeMirror-scroll
   overflow: auto
