--- a/stylus/repl.styl
+++ b/stylus/repl.styl
@@ -10,9 +10,30 @@ border-radius()
 
 body
   font-family: Ubuntu, sans-serif
-  background-color: #404040
+  background-color: #222
   color: #ccc
   overflow: hidden
+
+
+// scrollbar
+
+::-webkit-scrollbar
+    width: 7px
+    height: 7px
+
+::-webkit-scrollbar-track
+  //-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5)
+  background: transparent
+  border-radius: 10px
+
+::-webkit-scrollbar-thumb
+  border-radius: 10px
+  // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.7)
+  background: rgba(15,15,15,0.55)
+  border:1px solid rgba(255,255,255, 0.20)
+
+::-webkit-scrollbar-corner
+  background:transparent
 
 
 // CodeMirror
@@ -22,20 +43,22 @@ body
   letter-spacing: 0px
   box-shadow: 0 0 15px black
   position: absolute
-  width: 100%
-  height: 100%
-  // left: 1%
-  // top: 2%
-  // margin: 30px
+  left: 1%
+  top: 2%
+  width: 40%
+  height: 80%
+  //margin: 30px
 
 .CodeMirror-scroll
   overflow: auto
   height: 100%
 
+
 .CodeMirror-gutter
   background-color: transparent
   font-family: Ubuntu, sans-serif
   border-right: 0px solid #333
+  border-radius: 3px 0px 3px 0px
 
 .CodeMirror pre.CodeMirror-cursor
   border-left: 2px solid
@@ -88,12 +111,15 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket
   color: #ccc
   font-family: Ubuntu Mono, sans-serif
   font-size: 150%
-  background: transparent
+  background: #333
   overflow: auto
   border-radius: 3px
   border: none
 
 .CodeMirror-gutter {}
+
+.CodeMirror-scroll
+  background: transparent
 
 .cm-s-default div.CodeMirror-selected {background: #49483E !important;}
 
