--- a/stylus/repl.styl
+++ b/stylus/repl.styl
@@ -30,10 +30,10 @@ body
   border-radius: 10px
   // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.7)
   background: rgba(15,15,15,0.55)
-  border:1px solid rgba(255,255,255, 0.20)
+  border: 1px solid rgba(255,255,255, 0.20)
 
 ::-webkit-scrollbar-corner
-  background:transparent
+  background: transparent
 
 
 // CodeMirror
@@ -52,13 +52,17 @@ body
 .CodeMirror-scroll
   overflow: auto
   height: 100%
-
+  z-index: 100000005
 
 .CodeMirror-gutter
-  background-color: transparent
+  position: absolute
+  left: 0
+  top: 0
+  z-index: 10
+  background-color: #f7f7f7
   font-family: Ubuntu, sans-serif
   border-right: 0px solid #333
-  border-radius: 3px 0px 3px 0px
+
 
 .CodeMirror pre.CodeMirror-cursor
   border-left: 2px solid
@@ -116,7 +120,8 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket
   border-radius: 3px
   border: none
 
-.CodeMirror-gutter {}
+.CodeMirror-gutter
+  background: #555
 
 .CodeMirror-scroll
   background: transparent
