--- a/stylus/repl.styl
+++ b/stylus/repl.styl
@@ -36,29 +36,32 @@ body
   background: transparent
 
 
+#wrapper
+  position: absolute
+  left: 0%
+  top: 8%
+  width: 90%
+  height: 90%
+
 // CodeMirror
 
 .CodeMirror
   min-width: 300px
   letter-spacing: 0px
-  box-shadow: 0 0 15px black
-  position: absolute
-  left: 1%
-  top: 2%
-  width: 40%
-  height: 80%
+  position: relative
+  left: 50%
+  height: 100%
+  width: 50%
   //margin: 30px
 
 .CodeMirror-scroll
   overflow: auto
   height: 100%
-  z-index: 100000005
 
 .CodeMirror-gutter
   position: absolute
   left: 0
   top: 0
-  z-index: 10
   background-color: #f7f7f7
   font-family: Ubuntu, sans-serif
   border-right: 0px solid #333
@@ -117,6 +120,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket
   font-size: 150%
   background: #333
   overflow: auto
+  box-shadow: 0 0 15px black
   border-radius: 3px
   border: none
 
