--- a/stylus/repl.styl
+++ b/stylus/repl.styl
@@ -39,19 +39,17 @@ body
 #wrapper
   position: absolute
   left: 0%
-  top: 8%
-  width: 90%
-  height: 90%
+  top: 0%
+  width: 100%
+  height: 100%
 
 // CodeMirror
 
 .CodeMirror
   min-width: 300px
   letter-spacing: 0px
-  position: relative
-  left: 50%
   height: 100%
-  width: 50%
+  width: 100%
   //margin: 30px
 
 .CodeMirror-scroll
@@ -120,8 +118,8 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket
   font-size: 150%
   background: #333
   overflow: auto
-  box-shadow: 0 0 15px black
-  border-radius: 3px
+  //box-shadow: 0 0 15px black
+  //border-radius: 3px
   border: none
 
 .CodeMirror-gutter
